feat(ui): add complete/delete task controls and compact aligned TaskDoIt layout
Adds left check-circle toggle and right X delete per task; updates task card density, left-aligned task text, top brand panel with subtitle, matched panel geometry, flatter corners, and warm clean background.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
   </head>
   <body>
     <div id="app-shell" class="app-shell">
+      <header class="brand-panel" aria-label="App Header">
+        <div class="brand-copy">
+          <h1 class="brand-title">TaskDoIt</h1>
+          <p class="brand-subtitle">Your single list for everything that matters.</p>
+        </div>
+      </header>
+
       <main id="task-panel" class="task-panel" aria-label="Task Panel">
         <header class="panel-header">
-          <div class="panel-heading">
-            <h1>TaskDoIt</h1>
-            <p>Your single list for everything that matters.</p>
-          </div>
           <div
             id="panel-future-slot"
             class="panel-future-slot"
