feat(ui): add completed tab and polish empty states/template UX

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 
       <main id="task-panel" class="task-panel" aria-label="Task Panel">
         <header class="panel-header">
+          <div class="panel-view-controls">
+            <button
+              id="completed-tab-toggle"
+              class="panel-view-button"
+              type="button"
+              aria-label="Open completed tasks"
+            >
+              Completed
+            </button>
+          </div>
           <div class="task-filter-controls">
             <label for="task-filter" class="task-filter-label">
               <span class="task-filter-icon" aria-hidden="true">
