fix(ui): align template selector/menu width and keep dropdown open on template add

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 aria-label="Choose template"
               >
                 <span id="template-toggle-label">No template</span>
-                <span class="template-toggle-caret" aria-hidden="true">▾</span>
+                <span class="template-toggle-caret" aria-hidden="true">▴</span>
               </button>
               <div id="template-menu" class="template-menu" role="listbox" hidden>
                 <button
